﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.10) experimental; urgency=low

 * macos: modify locale path for opsi-script-gui.app

-- d.oertel <d.oertel@uib.de> Thu, 26 Nov 2020 15:00


opsi-winst/opsi-script (4.12.4.9) experimental; urgency=low

* GetSectionFromIniFile: remove encoding transformation (windows only)

-- j.werner <j.werner@uib.de> Wed, 25 Nov 2020 17:39


opsi-winst/opsi-script (4.12.4.8) experimental; urgency=low

* isRegexMatch: checks if string is NOT empty before exec is executed
		catchs exceptions

-- j.werner <j.werner@uib.de> Tue, 24 Nov 2020 14:55


MISSING CHANGELOGS:

opsi-winst/opsi-script (4.12.4.7)



opsi-winst/opsi-script (4.12.4.6) experimental; urgency=low

 * import osprocesses
 * call of opsi-laz-gui-test in extra log: ogdatei.StandardMainLogPath+'opsi-script-gui-test.log'

-- d.oertel <d.oertel@uib.de> Wed, 04 Nov 2020 15:00

opsi-winst/opsi-script (4.12.4.5) experimental; urgency=low

 * the one and only project file is now opsi-script.lpi
   you hav to switch zhe build mode for differen archtictures (win / mac / lin) (gui)
 * the opsi-script nogui version is now opsi-script
 * the opsi-script gui version is now opsi-script-gui
 * opsi-script tests via opsi-laz-gui-test if a gui can be used
   and if yes calls opsi-script-gui (via execv)

-- d.oertel <d.oertel@uib.de> Wed, 04 Nov 2020 15:00

opsi-winst/opsi-script (4.12.4.4) experimental; urgency=low

* new boolean function: isValidFQDN
* fix debug_lib do imported libs added to nologfiles in oslog
* osfunc: new randomstrWithParameters (also called by randomstr
* new string function randomstrWithParameters(minLength,nLowerCases,nUpperCases,nDigits,nSpecialChars : Integer): string;
* powershellcall and execwith calls at windows RunAndCaptureOut bydefault