@@ -194,7 +194,8 @@ begin
   try
     list1 := TStringList.Create;
     try
-    {$IFDEF UNIX}
+      searchstr := searchproc;
+      {$IFDEF LINUX}
       {in processlist we get " shortcmd ; ....." }
       {shortcmd has max length 15 and the rest does not help really }
       {so we try find an exact match in shortcmd }
@@ -205,8 +206,9 @@ begin
           'Process name to find (' + searchproc +
           ') is wider then 14 chars. Searching for: (' + searchstr + '). The result may not be exact',
           LLwarning);
-      end
-      else searchstr := searchproc;
+      end;
+      {$ENDIF LINUX}
+      {$IFDEF UNIX}
       list1.Text := getProcesslist.Text;
       //If Assigned(LogDatei) then LogDatei.log_list(list1,LLDebug2);
       for i := 0 to list1.Count - 1 do
